Fix security issues

--- a/website/slack.html
+++ b/website/slack.html
@@ -8,6 +8,9 @@
       content="0; url='https://yorkurobotics.slack.com/signup#'"
     />
     <title>YURS | Slack</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self';" />
+    <meta http-equiv="X-Content-Type-Options" content="nosniff;" />
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN;" />
   </head>
   <body></body>
 </html>
